--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="container-fluid bg-1 text-center">
                 <h2>Developer / Computer Scientist</h2>
-                <img src="./images/selfie-resized.jpg" style="display:inline" class="img-responsive img-circle margin" alt="ja" width="350" height="350" >
+                <img src="selfie-resized.jpg" style="display:inline" class="img-responsive img-circle margin" alt="ja" width="350" height="350" >
                 <h3>Uroš Keković</h3>
         </div>
         <div class="container-fluid bg-2 text-center">
